add new feature of configure format, color and alignment of text

--- a/muxMedia/releases/etc/mLab/muxPlayer.conf
+++ b/muxMedia/releases/etc/mLab/muxPlayer.conf
@@ -26,6 +26,9 @@ VideoFormat				Auto
 # Deep Color: 0: 24(8)bits; 1: 30(10)bits; 2: 36(12)bits; others: Auto Configuration. 100 is auto
 DeepColor						100
 
+# can be 0(RGB444)|1(YCBCR422)|2(YCBCR444)|3(YCBCR420)|100(Auto)
+ColorSpace						100
+
 
 # audio volume, from 1 to 100
 AudioVolume					100
