debug network streams when URLs are invalidate

--- a/muxMedia/releases/etc/mLab/muxMain.conf
+++ b/muxMedia/releases/etc/mLab/muxMain.conf
@@ -11,7 +11,7 @@ UNIXPort		/tmp/unixsocketCmd
 
 ## Logging configuration ##
 # test version, log to console
-#CustomLog		-
+# CustomLog		-
 # release version, log to a file
 CustomLog		/tmp/muxMedia.log
 
@@ -27,9 +27,13 @@ MaxLogSize		2048K
 # LOG_INFO			6
 # LOG_DEBUG			7
 
-DebugLevel		3
+DebugLevel			3
 
 Daemon				YES
+
+DebugMsg			NO
+
+DebugFsm			NO
 
 
 ## Storage configuration ##
