--- a/muxMedia/releases/etc/mLab/muxPlayer.conf
+++ b/muxMedia/releases/etc/mLab/muxPlayer.conf
@@ -1,4 +1,4 @@
-#
+# route add -net 224.0.0.0 netmask 240.0.0.0 eth0
 #	
 
 
@@ -36,7 +36,8 @@ AudioVolume					100
 # duration of timeout for play new url, in unit of second
 TimeoutLocal							5
 
-TimeoutNetwork						25
+# change from 25 seconds to 10. 07,26, 2019
+TimeoutNetwork						10
 
 # duration for the message when playing failed. unit of second
 TimeoutErrorMsg						10
